[package]
name = "xva-hir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xva-span = { path = "../xva-span" }
xva-ast = { path = "../xva-ast" }
xva-middle = { path = "../xva-middle" }
internment = { version = "0.7.4", features = ["arena"] }
ariadne = "0.4.0"
